# my-quant-portfolio

./: .gitignore  README.md
01 High Frequency Trading Core/: .clang-tidy  CMakeLists.txt  README.md  desktop.ini  requirements.txt
01 High Frequency Trading Core/.github/workflows/: ci.yml  docs-pages.yml  hft-core-ci.yml
01 High Frequency Trading Core/benchmark/: README.md  history.csv  thresholds.json
01 High Frequency Trading Core/docs/: Doxyfile.in
01 High Frequency Trading Core/lib/hft_core_lib/: CMakeLists.txt  core_lib_CMakeLists.txt  hft_core.hpp
01 High Frequency Trading Core/lib/hft_render_lib/: CMakeLists.txt  hft_render.hpp  render_lib_CMakeLists.txt
01 High Frequency Trading Core/python_bridge/: CMakeLists.txt  hft_core_pybind.cpp
01 High Frequency Trading Core/python_bridge/pybind11/: stl.hpp
01 High Frequency Trading Core/scripts/: check_benchmark_threshold.py
01 High Frequency Trading Core/src/: CMakeLists.txt  main.cpp
01 High Frequency Trading Core/tests/: CMakeLists.txt  tests_main.cpp
01 High Frequency Trading Core/tests/catch2/: catch_test_macros.hpp
02 Ultra-Low Latency Market Data Gateway/: CMakeLists.txt  README.md
02 Ultra-Low Latency Market Data Gateway/.github/workflows/: ci.yml
02 Ultra-Low Latency Market Data Gateway/apps/gateway/: CMakeLists.txt  main.cpp
02 Ultra-Low Latency Market Data Gateway/benchmarks/: CMakeLists.txt  benchmark_latency.cpp
02 Ultra-Low Latency Market Data Gateway/cmake/: CompilerOptions.cmake  Dependencies.cmake
02 Ultra-Low Latency Market Data Gateway/docs/: TECHNICAL_MANUAL.md
02 Ultra-Low Latency Market Data Gateway/include/ull/common/: fnv1a.hpp  mpsc_queue.hpp  spsc_ring_buffer.hpp  thread_topology.hpp
02 Ultra-Low Latency Market Data Gateway/include/ull/feeds/: data_access_view.hpp  feed_handler.hpp  structural_scan.hpp  tag_lookup.hpp
02 Ultra-Low Latency Market Data Gateway/include/ull/gateway/: market_data_gateway.hpp
02 Ultra-Low Latency Market Data Gateway/include/ull/network/: kernel_bypass.hpp  udp_receiver.hpp
02 Ultra-Low Latency Market Data Gateway/include/ull/sbe/: market_data_flyweight.hpp
02 Ultra-Low Latency Market Data Gateway/src/common/: CMakeLists.txt  thread_topology.cpp
02 Ultra-Low Latency Market Data Gateway/src/feeds/: CMakeLists.txt  data_access_view.cpp  feed_handler.cpp  structural_scan.cpp  structural_scan_avx2.cpp  structural_scan_avx512.cpp  structural_scan_context.hpp  structural_scan_scalar.cpp
02 Ultra-Low Latency Market Data Gateway/src/gateway/: CMakeLists.txt  market_data_gateway.cpp
02 Ultra-Low Latency Market Data Gateway/src/network/: CMakeLists.txt  kernel_bypass.cpp  udp_receiver.cpp
02 Ultra-Low Latency Market Data Gateway/src/sbe/: CMakeLists.txt
02 Ultra-Low Latency Market Data Gateway/tests/: CMakeLists.txt  test_kernel_bypass.cpp  test_market_data_gateway.cpp  test_mpsc_queue.cpp  test_network_timestamping.cpp  test_sbe_flyweight.cpp  test_spsc_ring_buffer.cpp  test_thread_topology.cpp  test_two_stage_parsing.cpp
03 Automated Database Management and ML Prediction/: .gitignore  CMakeLists.txt  README.md  tmp_inspect_forecast.py  vcpkg.json
03 Automated Database Management and ML Prediction/config/: pipeline.json
03 Automated Database Management and ML Prediction/docker/: .env.example  docker-compose.yml
03 Automated Database Management and ML Prediction/docker/init/: 01_schema.sql
03 Automated Database Management and ML Prediction/docs/: design.md  install.md
03 Automated Database Management and ML Prediction/scripts/: build_cpp.ps1  fetch_yahoo_data.ps1  full_pipeline.ps1  generate_sample_data.ps1  init_db.ps1  run_etl.ps1  run_features.ps1  run_inference.ps1  run_pipeline_yahoo.ps1  setup_external_deps.ps1  setup_python.ps1  start_infra.ps1  start_local_postgres.ps1  stop_infra.ps1  train_model.ps1
03 Automated Database Management and ML Prediction/src/cpp/: CMakeLists.txt  main_etl.cpp  main_features.cpp  main_inference.cpp
03 Automated Database Management and ML Prediction/src/cpp/common/: config.cpp  config.hpp  logger.cpp  logger.hpp  types.cpp  types.hpp
03 Automated Database Management and ML Prediction/src/cpp/db/: connection_pool.cpp  connection_pool.hpp  feature_repository.cpp  feature_repository.hpp  feature_writer.cpp  feature_writer.hpp  redis_cache.cpp  redis_cache.hpp  time_utils.cpp  time_utils.hpp  timescale_writer.cpp  timescale_writer.hpp
03 Automated Database Management and ML Prediction/src/cpp/etl/: cleaner.cpp  cleaner.hpp  csv_writer.cpp  csv_writer.hpp  imputer.cpp  imputer.hpp  tick_parser.cpp  tick_parser.hpp
03 Automated Database Management and ML Prediction/src/cpp/features/: aggregator.cpp  aggregator.hpp  feature_matrix.cpp  feature_matrix.hpp  technical_indicators.cpp  technical_indicators.hpp
03 Automated Database Management and ML Prediction/src/cpp/inference/: onnx_engine.cpp  onnx_engine.hpp  signal_generator.cpp  signal_generator.hpp
03 Automated Database Management and ML Prediction/src/python/: generate_sample_data.py  requirements.txt
03 Automated Database Management and ML Prediction/src/python/common/: config.py
03 Automated Database Management and ML Prediction/src/python/data/: fetch_yahoo.py
03 Automated Database Management and ML Prediction/src/python/features/: __init__.py  engineer_features.py  load_data.py
03 Automated Database Management and ML Prediction/src/python/forecast/: future_trend.py
03 Automated Database Management and ML Prediction/src/python/models/: backtest.py  cv_utils.py  train_model.py
03 Automated Database Management and ML Prediction/src/python/visualization/: forecast.py  plot_predictions.py
03 Automated Database Management and ML Prediction/tests/: CMakeLists.txt  test_cleaner.cpp  test_indicators.cpp  test_parser.cpp
04 Statistical Arbitrage Quant Researcher/: CMakeLists.txt  requirements.txt  run_pipeline.py
04 Statistical Arbitrage Quant Researcher/include/: order_execution.hpp  stat_arb_engine.hpp
04 Statistical Arbitrage Quant Researcher/src/: order_execution.cpp  stat_arb_engine.cpp
Practice/: test.cpp  (+19 more)
(+37 files in other folders)
